force-app/main/default/objects/RM_Config__mdt/RM_Config__mdt.object-meta.xml
<CustomObject>
    <description>Objeto con configuraciones relacionadas a Redmotors</description>
    <label>RM Config</label>
    <pluralLabel>RM_Config</pluralLabel>
</CustomObject>