force-app/main/default/objects/RM_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>