force-app/main/default/objects/RM_Config__mdt/fields/Perfiles__c.field-meta.xml
<CustomField>
    <fullName>Perfiles__c</fullName>
    <label>Perfiles</label>
    <type>TextArea</type>
</CustomField>